@@ -524,6 +524,30 @@ return|return
 literal|true
 return|;
 block|}
+comment|// IVY-1328: some servers return a 204 on a HEAD request
+if|if
+condition|(
+literal|"HEAD"
+operator|.
+name|equals
+argument_list|(
+name|con
+operator|.
+name|getRequestMethod
+argument_list|()
+argument_list|)
+operator|&&
+operator|(
+name|status
+operator|==
+literal|204
+operator|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
 name|Message
 operator|.
 name|debug
