@@ -373,22 +373,6 @@ name|httpclient
 operator|.
 name|methods
 operator|.
-name|InputStreamRequestEntity
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|commons
-operator|.
-name|httpclient
-operator|.
-name|methods
-operator|.
 name|PutMethod
 import|;
 end_import
@@ -1178,6 +1162,30 @@ operator|==
 name|HttpStatus
 operator|.
 name|SC_OK
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+comment|// IVY-1328: some servers return a 204 on a HEAD request
+if|if
+condition|(
+literal|"HEAD"
+operator|.
+name|equals
+argument_list|(
+name|method
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|&&
+operator|(
+name|status
+operator|==
+literal|204
+operator|)
 condition|)
 block|{
 return|return
